--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -47,6 +47,7 @@
     font-weight: 600;
     font-size: 1.5rem;
     color:var(--textColor);
+    text-align: center;
     
 }
 
@@ -54,43 +55,16 @@
     font-weight:bold;
     color:var(--otherColor);
     font-size: 2rem;
+    text-align: center;
 }
 
 .product-btn{
     width:100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap:1rem;
+    display: flex;
     align-items: center;
     justify-content: center;
     margin: 1rem auto;
 }
 
-.product-btn p{
-    border: 1px solid var(--textColor);
-    margin: 0 1rem;
-    font-size: 1.5rem;
-    text-align: center;
-}
 
-.btn-add{
-    background-color: var(--otherColor);
-    margin: 0 1rem;
-    font-size: 1.5rem;
-    color: var(--textColor);
-    font-weight:600;
-    border: 1px solid var(--textColor);
-    cursor:pointer;
-}
 
-@media only screen and (max-width:1024px) {
-
-    .btn-add{
-        font-size: 1rem;    
-    }
-
-    .product-btn p{
-        font-size: 1rem;   
-    }
-
-}
