--- a/src/components/Products/Counter.css
+++ b/src/components/Products/Counter.css
@@ -9,13 +9,13 @@
 
 
 .btn-counter{
-    background-color: var(--otherColor);
+    background-color: white;
     font-size: 1.5rem;
-    color: var(--textColor);
+    color: var(--otherColor);
     font-weight:600;
     border: 1px solid var(--textColor);
     cursor:pointer;
-    width: 6rem;
+    width: 3rem;
     margin: 1rem;
 }
 
