--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -64,7 +64,20 @@
     align-items: center;
     justify-content: center;
     margin: 1rem auto;
+    padding: 0;
 }
 
+.add-cart{
+    background-color: var(--otherColor);
+    font-size: 1.3rem;
+    color: white;
+    font-weight:600;
+    border: 1px solid var(--otherColor);
+    cursor:pointer;
+    width: 12rem;
+    height: 2.2rem;
+    margin: 1rem;
+    
+}
 
 
