--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -17,17 +17,17 @@
 }
 
 .products{
-    margin: 0 2rem;
     display:grid;
+    justify-items: center;
     grid-template-columns:repeat(auto-fit, minmax(22rem, 1fr));
-    gap: 3rem 2rem;
+    gap: 1rem 1rem;
     box-sizing: border-box;
-    padding: 5rem 0;
+    padding: 1.5rem 0;
 }
 
 .product{
     display:flex;
-    width: 100%;
+    width: 80%;
     flex-direction: column;
     align-items: center;
     border: 0.1rem solid var(--otherColor);
