--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -82,6 +82,7 @@ background-repeat: no-repeat;
 
 .item-info{
     margin-left: 2rem;
+    padding:0.5rem;
 }
 
 .item-title{
@@ -125,7 +126,8 @@ background-repeat: no-repeat;
 
 }
 .plus-minus-icon{
-    width: 0.9rem;
+    width: 1.8rem;
+    padding:0.1rem;
 }
 
 
