--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -12,12 +12,9 @@
     margin: 0;
     box-sizing: border-box;
 }
-/* End Global rules */
 
-/* Start body rules */
 body {
 background-image: linear-gradient(-225deg, white 0%, #E3FDF5 100%);
-/* background-image: linear-gradient(to top, #a8edea 0%, #74a580 100%); */
 background-attachment: fixed;
 background-repeat: no-repeat;
 }
@@ -52,10 +49,8 @@ background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items:center;
-    
-    
-}
 
+}
 
 .img-item{
     width: 100%;
@@ -77,7 +72,6 @@ background-repeat: no-repeat;
     border-radius: 0.5rem;
     
     
-
 }
 
 .item-info{
@@ -98,6 +92,7 @@ background-repeat: no-repeat;
 .remove-item{
     display:flex;
     justify-content:center;
+    cursor:pointer;
     
 
 }
@@ -128,10 +123,12 @@ background-repeat: no-repeat;
 .plus-minus-icon{
     width: 1.8rem;
     padding:0.1rem;
+    cursor:pointer;
 }
 
 
 .button-pay{
     width: 20%;
     margin:1rem;
+    cursor:pointer;
 }
